adding new html framework

--- a/index.html
+++ b/index.html
@@ -9,30 +9,35 @@
   <body>
 
     <div class="binary-container">
-        <div class="me">
+        <div id="root">
           <h1>Ashleigh Adams</h1>
         </div>
-        <div class="about-me">
 
+        <div id="first-layer-container">
+          <ul>
+            <li id="about-me"></li>
+            <li id="projects"></li>
+          </ul>
         </div>
-        <div class="contact">
 
+        <div id="third-layer-container">
+          <ul>
+            <li id="nothing"></li>
+            <li id="nothing"></li>
+            <li id="contact"></li>
+          </ul>
         </div>
-        <div id="enigmatic">
 
+        <div id="fourth-layer-container">
+          <ul>
+            <li id="enigmatic"></li>
+            <li id="oli-and-olive"></li>
+            <li id="sad-space"></li>
+            <li id="connect-four"></li>
+            <li id="medtrakr"></li>
+          </ul>
         </div>
-        <div id="oli-and-oliv">
 
-        </div>
-        <div id="connect-four">
-
-        </div>
-        <div id="sad-space">
-
-        </div>
-        <div class="med-container">
-
-        </div>
     </div>
 
   </body>
