adding centered text and divs

--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
     <meta charset="utf-8">
     <title>Ashleigh Adams</title>
     <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:300' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="/styles/main.css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="./styles/main.css" media="screen" title="no title" charset="utf-8">
     </script>
   </head>
   <body>
 
-    <div class="binary-container">
+    <div id="binary-container">
         <div id="root">
           <h1>Ashleigh Adams</h1>
+          01
         </div>
 
         <div id="first-layer-container">
