--- a/index.html
+++ b/index.html
@@ -10,32 +10,42 @@
   <body>
 
     <div id="binary-container">
-        <div id="root">
-          <h1>Ashleigh Adams</h1>
-          01
-        </div>
 
-        <div id="first-layer-container">
+          <h1>Ashleigh Adams</h1>
+
+
+
+
+        <div id="first-layer-container" class="active">
+          <div class="left-diagonal"></div>
+          <div class="right-diagonal"></div>
           <ul>
-            <li id="about-me"></li>
             <li id="projects"></li>
+            <li id="about-me"></li>
           </ul>
         </div>
 
-        <div id="third-layer-container">
+        <div id="second-layer-container" class="active">
           <ul>
             <li id="nothing"></li>
             <li id="nothing"></li>
+            <li id="tech"></li>
             <li id="contact"></li>
           </ul>
         </div>
 
-        <div id="fourth-layer-container">
+        <div id="third-layer-container" class="active">
           <ul>
             <li id="enigmatic"></li>
             <li id="oli-and-olive"></li>
             <li id="sad-space"></li>
             <li id="connect-four"></li>
+
+          </ul>
+        </div>
+
+        <div id="fourth-layer-container" class="active">
+          <ul>
             <li id="medtrakr"></li>
           </ul>
         </div>
