commiting larger boxes with new perspective

--- a/index.html
+++ b/index.html
@@ -10,46 +10,43 @@
   <body>
 
     <div id="binary-container">
-
+      <div id="reverse-binary-container">
           <h1>Ashleigh Adams</h1>
 
-
-
-
         <div id="first-layer-container" class="active">
-          <div class="left-diagonal"></div>
+<!--           <div class="left-diagonal"></div>
           <div class="right-diagonal"></div>
-          <ul>
-            <li id="projects"></li>
-            <li id="about-me"></li>
+ -->          <ul>
+            <li id="projects">0</li>
+            <li id="about-me">1</li>
           </ul>
         </div>
 
         <div id="second-layer-container" class="active">
           <ul>
-            <li id="nothing"></li>
-            <li id="nothing"></li>
-            <li id="tech"></li>
-            <li id="contact"></li>
+            <li id="nothing">0</li>
+            <li id="nothing">1</li>
+            <li id="tech">0</li>
+            <li id="contact">1</li>
           </ul>
         </div>
 
         <div id="third-layer-container" class="active">
           <ul>
-            <li id="enigmatic"></li>
-            <li id="oli-and-olive"></li>
-            <li id="sad-space"></li>
-            <li id="connect-four"></li>
+            <li id="enigmatic">0</li>
+            <li id="oli-and-olive">1</li>
+            <li id="sad-space">0</li>
+            <li id="connect-four">1</li>
 
           </ul>
         </div>
 
         <div id="fourth-layer-container" class="active">
           <ul>
-            <li id="medtrakr"></li>
+            <li id="medtrakr">0</li>
           </ul>
         </div>
-
+</div>
     </div>
 
   </body>
