adding 3d cube css

--- a/index.html
+++ b/index.html
@@ -9,48 +9,17 @@
   </head>
   <body>
 
-    <div id="binary-container">
-
-          <h1>Ashleigh Adams</h1>
-
-
-
-
-        <div id="first-layer-container" class="active">
-          <div class="left-diagonal"></div>
-          <div class="right-diagonal"></div>
-          <ul>
-            <li id="projects"></li>
-            <li id="about-me"></li>
-          </ul>
-        </div>
-
-        <div id="second-layer-container" class="active">
-          <ul>
-            <li id="nothing"></li>
-            <li id="nothing"></li>
-            <li id="tech"></li>
-            <li id="contact"></li>
-          </ul>
-        </div>
-
-        <div id="third-layer-container" class="active">
-          <ul>
-            <li id="enigmatic"></li>
-            <li id="oli-and-olive"></li>
-            <li id="sad-space"></li>
-            <li id="connect-four"></li>
-
-          </ul>
-        </div>
-
-        <div id="fourth-layer-container" class="active">
-          <ul>
-            <li id="medtrakr"></li>
-          </ul>
-        </div>
-
+<div class="container">
+  <div class="wrapper">
+    <div class="cube">
+      <div id="front">front</div>
+      <div id="back">back</div>
+      <div id="top">top</div>
+      <div id="bottom">bottom</div>
+      <div id="left">left</div>
+      <div id="right">right</div>
     </div>
-
+  </div>
+</div>
   </body>
 </html>
