--- a/index.html
+++ b/index.html
@@ -6,20 +6,25 @@
     <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:300' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="./styles/main.css" media="screen" title="no title" charset="utf-8">
     </script>
+    <script type="text/javascript" src="./js/scripts.js"></script>
   </head>
   <body>
 
-<div class="container">
-  <div class="wrapper">
-    <div class="cube">
-      <div id="front">front</div>
-      <div id="back">back</div>
-      <div id="top">top</div>
-      <div id="bottom">bottom</div>
-      <div id="left">left</div>
-      <div id="right">right</div>
+
+    <div class="cube-container">
+      
+      <div id="cube">
+          <figure class="front">1</figure>
+          <figure class="back">2</figure>
+          <figure class="right">3</figure>
+          <figure class="left">4</figure>
+          <figure class="top">5</figure>
+          <figure class="bottom">6</figure>
+      </div>
+
     </div>
-  </div>
-</div>
+
+
+
   </body>
 </html>
