adding text area

--- a/index.html
+++ b/index.html
@@ -29,18 +29,19 @@
 
           <figure class="back" id="contact">
             <h2>Contact</h2>
-            <p>email: ashleigh.adams22@gmail.com</p>
           </figure>
 
-          <figure class="right" id="enigmatic">Enigmatic</figure>
-          <figure class="left" id="medtrakr">MedTrakr</figure>
-          <figure class="top" id="connectfour">Connect Four</figure>
-          <figure class="bottom" id="space">Space</figure>
+          <figure class="right" id="enigmatic"></figure>
+          <figure class="left" id="medtrakr"></figure>
+          <figure class="top" id="connectfour"></figure>
+          <figure class="bottom" id="space"></figure>
 
       </div>
 
     </div>
 
+
+    <p></p>
 
   </body>
 </html>
