adding media queries

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
       
       <div id="cube">
 
-          <figure class="front" id="about">
-            <h2>About</h2>
+          <figure class="front" id="projects">
+            <h2>Projects</h2>
           </figure>
 
           <figure class="back" id="contact">
@@ -41,7 +41,7 @@
     </div>
 
 
-    <p></p>
+<!--     <p></p> -->
 
   </body>
 </html>
