adding github link to footer

--- a/index.html
+++ b/index.html
@@ -10,13 +10,9 @@
   </head>
   <body>
 
-   <header>
+
     <h1>Ashleigh Adams</h1>
-    <ul>
-      <li><a href="#about">About</a></li>
-      <li><a href="#contact">Contact</a></li>
-    </ul>
-   </header>
+
 
 
     <div class="cube-container">
@@ -40,8 +36,14 @@
 
     </div>
 
+    <footer>
+      <ul>
+        <li><a href="#about">About</a></li>
+        <li><a href="#contact">Contact</a></li>
+        <li><a href="#github">&#xE800</a></li>
+      </ul>
+    </footer>
 
-<!--     <p></p> -->
 
   </body>
 </html>
