setting nav header

--- a/index.html
+++ b/index.html
@@ -9,9 +9,16 @@
     <script type="text/javascript" src="./js/scripts.js"></script>
   </head>
   <body>
-
-
+    
     <h1>Ashleigh Adams</h1>
+      
+      <ul>
+        <li><a href="#about">About</a></li>
+        <li><a href="#contact">Contact</a></li>
+        <li><a href="https://github.com/aadams22">&#xE800</a></li>
+      </ul>
+
+
 
 
 
@@ -36,14 +43,14 @@
 
     </div>
 
-    <footer>
+<!--     <footer>
       <ul>
         <li><a href="#about">About</a></li>
         <li><a href="#contact">Contact</a></li>
-        <li><a href="#github">&#xE800</a></li>
+        <li><a href="https://github.com/aadams22">&#xE800</a></li>
       </ul>
     </footer>
-
+ -->
 
   </body>
 </html>
