adding contact information

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:300' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="./styles/main.css" media="screen" title="no title" charset="utf-8">
     </script>
-    <script type="text/javascript" src="./js/scripts.js"></script>
+    <script type="text/javascript" src="./js/infobox.js"></script>
+    <script type="text/javascript" src="./js/cuberotation.js"></script>
   </head>
   <body>
     
@@ -43,14 +44,21 @@
 
     </div>
 
-<!--     <footer>
+    <section id="info-box"></section>
+
+    <section id="about">
+      <h2>About</h2>
+      <div id="my-face"></div>
+    </section>
+
+    <section id="contact">
+      <h2>Contact</h2>
       <ul>
-        <li><a href="#about">About</a></li>
-        <li><a href="#contact">Contact</a></li>
-        <li><a href="https://github.com/aadams22">&#xE800</a></li>
+        <li>952.334.2618</li>
+        <li>ashleigh.adams22@gmail.com</li>
       </ul>
-    </footer>
- -->
+    </section>
+
 
   </body>
 </html>
