--- a/index.html
+++ b/index.html
@@ -31,9 +31,7 @@
             <h2>Projects</h2>
           </figure>
 
-          <figure class="back" id="contact">
-            <h2>Contact</h2>
-          </figure>
+          <figure class="back" id="x"></figure>
 
           <figure class="right" id="enigmatic"></figure>
           <figure class="left" id="medtrakr"></figure>
@@ -49,6 +47,23 @@
     <section id="about">
       <h2>About</h2>
       <div id="my-face"></div>
+      <ul>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>Javascript</li>
+        <li>jQuery</li>
+        <li>Angular</li>
+        <li>Ruby</li>
+        <li>Rails</li>
+        <li>Python</li>
+        <li>MySql</li>
+        <li>PostGres</li>
+        <li>MongoDB</li>
+        <li>Python</li>
+        <li>php</li>
+        <li>WordPress</li>
+
+      </ul>
     </section>
 
     <section id="contact">
