new contact view

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <li><a href="#about">About</a></li>
         <li><a href="#contact">Contact</a></li>
         <li><a href="https://github.com/aadams22">&#xE800</a></li>
+        <li><a href="https://www.linkedin.com/in/ashleighnicoleadams">&#xE802</a></li>
       </ul>
 
 
@@ -32,7 +33,6 @@
           </figure>
 
           <figure class="back" id="x"></figure>
-
           <figure class="right" id="enigmatic"></figure>
           <figure class="left" id="medtrakr"></figure>
           <figure class="top" id="connectfour"></figure>
@@ -48,8 +48,8 @@
       <h2>About</h2>
       <div id="my-face"></div>
       <ul>
-        <li>HTML</li>
-        <li>CSS</li>
+        <li>HTML5</li>
+        <li>CSS3</li>
         <li>Javascript</li>
         <li>jQuery</li>
         <li>Angular</li>
@@ -57,21 +57,24 @@
         <li>Rails</li>
         <li>Python</li>
         <li>MySql</li>
-        <li>PostGres</li>
+        <li>PostGreSQL</li>
         <li>MongoDB</li>
         <li>Python</li>
         <li>php</li>
         <li>WordPress</li>
-
       </ul>
+
+      <h4>Hi! My Name is Ashleigh Adams. I am a software engineer with a background in Music Performance, Music Theory, and German.</h4>
+
+      <p></p>
     </section>
 
     <section id="contact">
       <h2>Contact</h2>
-      <ul>
-        <li>952.334.2618</li>
+      <h4>ashleigh.adams22@gmail.com</h4>
+<!--       <ul>
         <li>ashleigh.adams22@gmail.com</li>
-      </ul>
+      </ul> -->
     </section>
 
 
