modifying moble first sizes

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <section id="about">
       <h2>About</h2>
       <div id="my-face"></div>
-      <ul>
+<!--       <ul>
         <li>HTML5</li>
         <li>CSS3</li>
         <li>Javascript</li>
@@ -62,19 +62,16 @@
         <li>Python</li>
         <li>php</li>
         <li>WordPress</li>
-      </ul>
+      </ul> -->
 
-      <h4>Hi! My Name is Ashleigh Adams. I am a software engineer with a background in Music Performance, Music Theory, and German.</h4>
+      <h4>Hi! My name is <span>Ashleigh Adams</span>. I am a software engineer with a background in Music Performance, Music Theory, and German. I work primarily in Javascript and Ruby.</h4>
 
-      <p></p>
+      <p>I was born in Wiesbaden, Germany, but grew up in Minneapolis, Minnesota. After completing my studies in Vocal Performance, Music Theory, and German at the University of Minnesota, Twin Cities in 2012, I moved to Berlin, Germany, where I began my career as an opera singer while continuing my studies. I am currently working as a freelance software engineer in New York City. </p>
     </section>
 
     <section id="contact">
-      <h2>Contact</h2>
+      <h2>Get in touch with me: </h2>
       <h4>ashleigh.adams22@gmail.com</h4>
-<!--       <ul>
-        <li>ashleigh.adams22@gmail.com</li>
-      </ul> -->
     </section>
 
 
