committing jquery flat layout functionality

--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:300' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="./styles/main.css" media="screen" title="no title" charset="utf-8">
     </script>
-    <script type="text/javascript" src="./js/infobox.js"></script>
-    <script type="text/javascript" src="./js/cuberotation.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
+    <script type="text/javascript" src="./js/cube-animation.js"></script>
+    <script type="text/javascript" src="./js/flat-layout.js"></script>
   </head>
   <body>
     
@@ -21,23 +22,15 @@
       </ul>
 
 
-
-
-
     <div class="cube-container">
       
       <div id="cube">
-
-          <figure class="front" id="projects">
-            <h2>Projects</h2>
-          </figure>
-
+          <figure class="front" id="projects"><h2>Projects</h2></figure>
           <figure class="back" id="x"></figure>
           <figure class="right" id="enigmatic"></figure>
           <figure class="left" id="medtrakr"></figure>
           <figure class="top" id="connectfour"></figure>
           <figure class="bottom" id="space"></figure>
-
       </div>
 
     </div>
