--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       
       <div id="cube">
           <figure class="front" id="projects"><h2>Projects</h2></figure>
-          <figure class="back" id="x"></figure>
+          <figure class="back" id="oli-and-olive"></figure>
           <figure class="right" id="enigmatic"></figure>
           <figure class="left" id="medtrakr"></figure>
           <figure class="top" id="connectfour"></figure>
