adding new ul alignment

--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
         <li>CSS3</li>
         <li>Javascript</li>
         <li>jQuery</li>
-        <li>Angular</li>
+        <li>AngularJS</li>
         <li>Ruby</li>
         <li>Rails</li>
         <li>Python</li>
         <li>MySql</li>
         <li>PostGreSQL</li>
         <li>MongoDB</li>
-        <li>Python</li>
+        <li>Java</li>
         <li>php</li>
         <li>WordPress</li>
       </ul> -->
