--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <header>
       <h1>Ashleigh Adams</h1>
       <ul>
+        <li>Projects</li>
         <li><a href="#about">About</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
@@ -64,7 +65,7 @@
       <h2>Contact: </h2>
       <ul>
         <li><a href="https://github.com/aadams22">&#xE800</a></li>
-        <li><a href="mailto:ashleigh.adams22@gmail.com">&#xE800</a></li>
+        <li><a href="mailto:ashleigh.adams22@gmail.com">&#xE801</a></li>
         <li><a href="https://www.linkedin.com/in/ashleighnicoleadams">&#xE802</a></li>
       </ul>
     </section>
